fixing parameter
