# app_dentist/demo/v1/schemas.py
@@ -53,8 +53,8 @@ base_path = '/v1'
 definitions = {'definitions': {'Dentist': {'type': 'object', 'properties': {'id': {'type': 'string'}, 'name': {'type': 'string'}, 'location': {'type': 'string'}, 'work_days': {'type': 'array', 'items': {'type': 'string', 'enum': ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}}, 'specialities': {'type': 'array', 'items': {'type': 'string', 'enum': ['public health dentistry', 'dento-maxillofacial radiology', 'endodontics', 'forensic odontology', 'oral and maxillofacial surgery', 'oral medicine', 'oral and maxillofacial pathology', 'oral surgery', 'orthodontics', 'paediatric dentistry', 'periodontics', 'prosthodontics', 'special needs dentistry']}}}}, 'Timeslot': {'type': 'object', 'properties': {'date': {'type': 'string', 'format': 'date'}, 'time': {'type': 'string', 'description': 'starting time, 1 hour timeslot', 'pattern': '^\\d{2}(A|P)M$'}, 'status': {'type': 'string', 'pattern': '^(Available|Reserved)$'}}}, 'Dentist_filter': {'type': 'object', 'properties': {'name': {'type': 'string', 'description': 'dentist name insentitve case'}, 'work_day': {'type': 'string', 'description': 'day name of week', 'enum': ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}, 'location': {'type': 'string', 'description': 'insentitve case'}}}}, 'parameters': {}}
 
 validators = {
-    ('dentists', 'GET'): {'json': {'type': 'object', 'properties': {'name': {'type': 'string', 'description': 'dentist name insentitve case'}, 'work_day': {'type': 'string', 'description': 'day name of week', 'enum': ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}, 'location': {'type': 'string', 'description': 'insentitve case'}}}, 'args': {'required': [], 'properties': {'offset': {'type': 'integer', 'minimum': 0, 'default': 0}, 'limit': {'type': 'integer', 'minimum': 1, 'default': 10}}}},
-    ('dentists_dentistId_timeslots', 'GET'): {'json': {'type': 'object', 'properties': {'start_date': {'type': 'string', 'format': 'date'}, 'end_date': {'type': 'string', 'format': 'date'}}}},
+    ('dentists', 'GET'): {'args': {'required': ['offset', 'limit'], 'properties': {'offset': {'type': 'integer', 'minimum': 0, 'default': 0}, 'limit': {'type': 'integer', 'minimum': 1, 'default': 10}, 'name': {'type': 'string', 'description': 'dentist name insentitve case'}, 'work_day': {'type': 'string', 'description': 'day name of week', 'enum': ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']}, 'location': {'type': 'string', 'description': 'suburb name, insentitve case'}}}},
+    ('dentists_dentistId_timeslots', 'GET'): {'args': {'required': ['start_date'], 'properties': {'start_date': {'type': 'string', 'format': 'date'}, 'end_date': {'type': 'string', 'format': 'date'}}}},
 }
 
 filters = {
